# dirscanner

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  pcregex.cpp  pcregex.h  pointer_wrapper.h
